// Copyright 2021 Harness Inc.
// 
// Licensed under the Apache License, Version 2.0
// http://www.apache.org/licenses/LICENSE-2.0

syntax = "proto3";

package io.harness.pms.contracts.service;

option java_multiple_files = true;

service InterruptProtoService {
  rpc handleAbort(InterruptRequest) returns (InterruptResponse);
  rpc handleFailure(InterruptRequest) returns (InterruptResponse);
}

message InterruptRequest {
  string notifyId = 1;
}

message InterruptResponse {
  string dummy = 1;
}
